--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   firebase_auth: ^4.10.1
   firebase_core: ^2.17.0
   google_fonts: ^6.1.0
+  page_transition: ^2.1.0
+  firebase_database: ^10.2.7
+  uuid: ^4.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
