--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   firebase_database: ^10.2.7
   uuid: ^4.1.0
   provider: ^6.0.5
+  dart_date: ^1.2.2
+  intl: ^0.18.1
+ 
 
 dev_dependencies:
   flutter_test:
