--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   provider: ^6.0.5
   dart_date: ^1.2.2
   intl: ^0.18.1
- 
+  flutter_iconpicker: ^3.2.4
 
 dev_dependencies:
   flutter_test:
