--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   dart_date: ^1.2.2
   intl: ^0.18.1
   flutter_iconpicker: ^3.2.4
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
