--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   firebase_auth: ^4.10.1
   firebase_core: ^2.17.0
+  firebase_storage: ^11.2.8
   google_fonts: ^6.1.0
   page_transition: ^2.1.0
   firebase_database: ^10.2.7
@@ -21,6 +22,11 @@ dependencies:
   intl: ^0.18.1
   flutter_iconpicker: ^3.2.4
   flutter_easyloading: ^3.0.5
+  flutter_downloader: ^1.11.5
+  file_picker: ^6.1.1
+  permission_handler: ^11.1.0
+  device_info_plus: ^9.1.1
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
